<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:gravity="center"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="@drawable/container"
        android:elevation="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_signup"
            android:textSize="30sp"
            android:layout_marginBottom="10dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_input"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:hint="@string/input_email_hint"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_input"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:hint="@string/input_username_hint"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:hint="@string/input_password_hint"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_repeat_password_hint"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:hint="@string/input_repeat_password_hint"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/container"
            android:text="@string/button_confirm"
            android:layout_marginVertical="5dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_have_account"
                android:layout_marginHorizontal="2dp"/>
            <TextView
                android:id="@+id/button_log_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_login"
                android:textColor="?attr/colorPrimary"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginHorizontal="2dp"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
